# pico

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/cdc-inout/: CMakeLists.txt  main.cpp  test.py  test_rcv.py  tusb_config.h
src/cdc-nrf/: CMakeLists.txt  README.md
src/cdc-nrf/PC/: CMakeLists.txt  main.cpp
src/cdc-nrf/remote/: CMakeLists.txt  echo.h  main.cpp
src/cdc-sensors/: CMakeLists.txt  echo.cpp  echo.h  main.cpp  usb_descriptors.cpp
src/cdc-temperature/: CMakeLists.txt  main.cpp  temperature.cpp
src/dragon/: CMakeLists.txt  main.cpp
src/dragon/PC/: CMakeLists.txt  main.cpp
src/hid-inout/: CMakeLists.txt  main.c  test.py  usb_descriptors.c
src/pin/: pin.cpp
src/radio/: radio.cpp  radio.h
src/relay/: CMakeLists.txt  main.cpp
src/relay-switch/: CMakeLists.txt
src/relay-switch-auth/: CMakeLists.txt  README.md
src/relay-switch-auth/relay-receiver/: CMakeLists.txt  README.md  key.h  main.cpp
src/relay-switch-auth/relay-transmitter/: CMakeLists.txt  README.md  commands.h  main.cpp
src/relay-switch/relay-receiver/: CMakeLists.txt  main.cpp
src/relay-switch/relay-transmitter/: CMakeLists.txt  commands.h  main.cpp
src/sleep/: sleep.cpp  sleep.h
src/temperature/: CMakeLists.txt  main.cpp  temperature.cpp  temperature.h
src/temperature/kicad/: fp-lib-table  my_LM2596.kicad_sym  rf_temperature.kicad_pcb  rf_temperature.kicad_prl  rf_temperature.kicad_pro  rf_temperature.kicad_sch  sym-lib-table
src/temperature/kicad/my_LM2596_Library.pretty/: my_LM2596AdjBuck.kicad_mod
src/utils/: CMakeLists.txt
src/utils/crypto/: CMakeLists.txt  aes.c  ecdh.c  mac.c  sts.cpp  utils.c
src/utils/crypto/include/utils/: aes.h  mac.h  sts.hpp  utils.h
src/utils/motor/: CMakeLists.txt  motor.c
src/utils/motor/include/utils/: motor.h
src/utils/mpu6000/: CMakeLists.txt  mpu6000.c
src/utils/mpu6000/include/utils/: mpu6000.h
src/utils/pid/: CMakeLists.txt  pid.c
src/utils/pid/include/utils/: pid.h
src/utils/pin/: CMakeLists.txt  pin.cpp
src/utils/pin/include/utils/: pin.h
src/utils/radio/: CMakeLists.txt  radio.cpp
src/utils/radio/include/utils/: radio.h
src/utils/sleep/: CMakeLists.txt  sleep.c  sleep.cpp
src/utils/sleep/include/utils/: sleep.h
